# LCAE-AI

./: .env  .env.local.example  .gitignore  Modelfile  PRD.md  README.md  TTS_PRD.md  asr_pipeline.py  colab_merge_to_gguf.ipynb  main.py  pyproject.toml  request.txt  requirements.txt  requirements_asr.txt  requirements_llm.txt
PRD/: ASR_Finetuning_PRD.md  ASR_PRD.md  LLM_PRD.md  TTS_PRD.md
chroma_db/: chroma.sqlite3
data/: README.md  gaussian splatting.txt  train.jsonl  train_v2.jsonl
llm_training/: README.md  requirements.txt
llm_training/datasets/: train_v3.jsonl
llm_training/notebooks/: colab_merge_to_gguf.ipynb  colab_train_sft.ipynb  kaggle_train_sft_v3.ipynb
llm_training/scripts/: gguf.py  merge.py  train.py
llm_training/tests/: check_llm_pipeline.py  llm_pipeline_outputs.jsonl  sample_broadcast.jsonl
pipeline/: __init__.py
pipeline/listenlist/: __init__.py  ai_output_list.py  ai_outputs.jsonl  chat.jsonl  chat_list.py  listen_list.py  paths.py  ready_summary.json  summary.jsonl  transcriptions.jsonl
pipeline/llm/: __init__.py
pipeline/llm/chain/: graph.py  ingest_data.py  nodes.py  (+4 more)
pipeline/stt/: __init__.py  asr_Finetuning.py  asr_pipeline.py  convert.py
pipeline/tts/: __init__.py  tts_pipeline.py
scripts/: merge_adapter.py  train_sft.py
src/: main.py
src/chain/: graph.py  ingest_data.py  nodes.py  state.py  test_analyzer.py  test_full_logic.py  test_full_sequence.py  test_rag.py
src/prompts/: persona.py
src/utils/: embeddings.py  llm.py
tests/llm/: run_loop.py  test_analyzer.py  test_full_logic.py  test_full_sequence.py  test_rag.py  test_scripted_responses.py  test_summary_closing_format.py
(+4 files in other folders)
