[project]
name = "capstone-lcae-ai"
version = "0.1.0"
description = "2026 캡스톤 — STT → LLM(LangGraph) → TTS 실시간 AI MC 파이프라인"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # 공통
    "numpy>=1.24.4",
    "python-dotenv>=1.2.2",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
    # STT
    "faster-whisper>=1.2.0",
    "websockets>=12.0",
    "sounddevice>=0.4.6",
    # TTS
    "kokoro>=0.9.4",
    "misaki[ko]",
    # GPU / Torch
    "torch>=2.3.1",
    "torchaudio>=2.3.1",
    # ASR Finetuning
    "datasets",
    "evaluate",
    "jiwer>=4.0.0",
    "torchcodec>=0.11.1",
    "accelerate",
    "transformers",
    # LLM / LangGraph / RAG
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "langchain-community>=0.4.1",
    "langchain-chroma>=1.1.0",
    "langgraph>=1.1.6",
    "chromadb>=1.5.7",
    "pypdf>=6.9.2",
    "sentence-transformers>=5.4.0",
    # API 서버
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "langchain-ollama>=1.1.0",
    "mlx>=0.31.2",
    "mlx-lm>=0.31.3",
]
